<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Source Server Manager</string>
    <string name="serverSelectText">-- Tap to change</string>
    <string name="addServerTitle">Add Server</string>
    <string name="chooseServerTitle">Choose Server</string>
    <string name="editServerTitle">Edit Server</string>
    <string name="removeServerTitle">Choose Server to Remove</string>
    <string name="removeServerText">Remove Server</string>
    <string name="closeText">Close</string>
    <string name="saveText">Save</string>
    <string name="addText">Add</string>
    <string name="cancelText">Cancel</string>
    <string name="helpText">Help</string>
    <string name="quitText">Quit</string>
    
    <string name="cmdLblText">Cmd:</string>
    <string name="nameLblText">Name:</string>
    <string name="serverIPLblText">Server IP:</string>
    <string name="serverPortLblText">Server Port:</string>
    <string name="rconLblText">Rcon Password:</string>
    <string name="tapToSelectText">Tap to Select Server</string>
    <string name="sendText">Send</string>
    
    <string name="failedRcon">Failed to send RCON command.\n</string>
    <string name="emptyRcon">RCON response empty (sent successfully).\n</string>
    <string name="badRcon">Incorrect RCON password.\n</string>
    <string name="socketTimeout">Connection timed out.\n</string>
    <string name="noServerMsg">It appears that you do not currently have any servers to choose from, please add your server details by selecting \"Add Server\" from the menu.</string>
    <string name="helpMsg">--Add a Server--\n
    Press \"Menu\" from the main screen, and select \"Add Server\"\n\n
    --Useful commands--\n
    status : Display server and player information\n
    kick \"name\" : Kick player with corresponding name\n
    kickid \"steamid\" : Kick player with corresponding steamID\n\n
    
    For additional help or feature requests, email iamvixxor@gmail.com\n
    Finnish translation by Juho Mikkonen</string>
</resources>
