<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	android:id="@+id/editServerScroll"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	
<TableLayout 
	android:id="@+id/edit_server_layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1">
    
    <TableRow>
        <TextView
			android:id="@+id/serverNameLbl"
			android:text="@string/nameLblText"
			android:textSize="18sp"
            android:padding="3dip" />
        <EditText
        	android:id="@+id/serverName"
        	android:layout_column="1"
        	android:layout_height="38px"
        	android:layout_width="fill_parent"
        	android:gravity="left"
			android:text=""
			android:padding="3dip" />
    </TableRow>

    <TableRow>
        <TextView
			android:id="@+id/serverIPLbl"
			android:text="@string/serverIPLblText"
			android:textSize="18sp"
            android:padding="3dip" />
        <EditText
        	android:id="@+id/serverIP"
        	android:layout_column="1"
        	android:layout_height="38px"
        	android:layout_width="fill_parent"
        	android:gravity="left"
			android:text=""
			android:padding="3dip" />
    </TableRow>
    
    <TableRow>
        <TextView
			android:id="@+id/serverPortLbl"
			android:text="@string/serverPortLblText"
			android:textSize="18sp"
            android:padding="3dip" />
        <EditText
        	android:id="@+id/serverPort"
        	android:layout_column="1"
        	android:layout_height="38px"
        	android:layout_width="fill_parent"
        	android:gravity="left"
        	android:numeric="integer"
			android:text="27015"
			android:padding="3dip" />
    </TableRow>
    
    <TableRow>
        <TextView
			android:id="@+id/rconPassLbl"
			android:text="@string/rconLblText"
			android:textSize="18sp"
            android:padding="3dip" />
        <EditText
        	android:id="@+id/rconPass"
        	android:layout_column="1"
        	android:layout_height="38px"
        	android:layout_width="fill_parent"
        	android:gravity="left"
			android:password="true"
			android:text=""
			android:padding="3dip" />
    </TableRow>

</TableLayout>
</ScrollView>