<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1">
    
    <Button
			android:id="@+id/serverSelectButton"
			android:layout_width="fill_parent"
			android:layout_height="38px"
			android:text="@string/tapToSelectText" />
    
    <TableRow>
        <TextView
			android:id="@+id/rconCommandLbl"
			android:text="@string/cmdLblText"
			android:textSize="18sp"
            android:padding="3dip" />
        <AutoCompleteTextView
        	android:id="@+id/rconCommand"
        	android:layout_height="38px"
        	android:layout_width="fill_parent"
        	android:gravity="left"
			android:text=""
			android:padding="3dip" />
    </TableRow>
    
    <TableRow>
    	<TextView
			android:id="@+id/fillerLbl"
			android:text=""
			android:textSize="18sp"
            android:padding="3dip" />
        <Button
			android:id="@+id/sendButton"
			android:layout_width="fill_parent"
			android:layout_height="38px"
			android:text="@string/sendText" />
	</TableRow>
			
	<ScrollView android:id="@+id/rconResponseScroll"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent" >
		
		<TextView
			android:id="@+id/rconResponse"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:text=""
			android:singleLine="false" />
	</ScrollView>

</TableLayout>